welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:9: error: value ==- is not a member of Int
  if (res==-1){
         ^